--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 	   <artifactId>hibernate-validator</artifactId>
 	   <version>6.0.16.Final</version>
 	</dependency>
+  	<dependency>
+  		<groupId>javax.validation</groupId>
+  		<artifactId>validation-api</artifactId>
+  		<version>2.0.1.Final</version>
+  	</dependency>
   </dependencies>
   
 </project>
